--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -23,9 +23,11 @@ sites:
   - name: Configuration Management DB (CMDB) 	
     url: https://deep-paas.cloud.ba.infn.it/cmdb
   - name: Infrastructure Manager (IM)
-    url: https://deep-paas.cloud.ba.infn.it/im
+    url: https://deep-paas.cloud.ba.infn.it/im/
   - name: SLA Manager (SLAM) 	
     url: https://deep-slam.cloud.ba.infn.it:8443/rest/slam
+    expectedStatusCodes:
+      403
   - name: Provider IFCA-LCG2   eu.indigo-datacloud.mesos
     url: https://mesos.cloud.ifca.es/mesos
   - name: Provider IFCA-LCG2   eu.indigo-datacloud.marathon
