--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -41,8 +41,12 @@ sites:
     url: https://api.cloud.ifca.es:5000/v3
   - name: Provider IISAS-Bratislava    eu.indigo-datacloud.chronos
     url: https://mesos.ui.sav.sk/chronos
+    expectedStatusCodes:
+      - 401
   - name: Provider IISAS-Bratislava    eu.indigo-datacloud.marathon
     url: https://mesos.ui.sav.sk/marathon
+    expectedStatusCodes:
+      - 401
   - name: Provider QCG     eu.deep.qcg
     url: https://qcg-deep.apps.paas-dev.psnc.pl/api
   - name: Provider RECAS-BARI  org.openstack.nova
